crates/sui/tests/snapshots/shell_tests__new_tests__new_then_test.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/new_tests/new_then_test.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# check that sui move new followed by sui move test succeeds
bfc move new example

# we mangle the generated toml file to replace the framework dependency with a local dependency
FRAMEWORK_DIR=$(echo $CARGO_MANIFEST_DIR | sed 's#/crates/sui##g')
cat example/Move.toml \
  | sed 's#\(Sui = .*\)git = "[^"]*", \(.*\)#\1\2#' \
  | sed 's#\(Sui = .*\), rev = "[^"]*"\(.*\)#\1\2#' \
  | sed 's#\(Sui = .*\)subdir = "\([^"]*\)"\(.*\)#\1local = "FRAMEWORK/\2"\3#' \
  | sed "s#\(Sui = .*\)FRAMEWORK\(.*\)#\1$FRAMEWORK_DIR\2#" \
  > Move.toml
mv Move.toml example/Move.toml

cd example && bfc move test

----- results -----
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY Sui
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Running Move unit tests
Test result: OK. Total tests: 0; passed: 0; failed: 0

----- stderr -----
